两个相同@ # 显示

--- a/Topic/Base.lproj/Main.storyboard
+++ b/Topic/Base.lproj/Main.storyboard
@@ -51,6 +51,13 @@
                                 <rect key="frame" x="0.0" y="773" width="414" height="89"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="r6F-zS-EcM">
+                                <rect key="frame" x="50" y="218.5" width="314" height="63"/>
+                                <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="r6F-zS-EcM" secondAttribute="height" multiplier="5:1" id="u03-V2-pd7"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
@@ -58,11 +65,14 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="zrA-1S-8wf" secondAttribute="bottom" id="4re-rQ-Z0u"/>
                             <constraint firstItem="zrA-1S-8wf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="8CT-Zv-dMe"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="zrA-1S-8wf" secondAttribute="trailing" id="BOd-bx-hax"/>
+                            <constraint firstItem="r6F-zS-EcM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="Cq6-V8-zo1"/>
                             <constraint firstItem="YRi-Yb-fbA" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="IBB-Xf-9bg"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="r6F-zS-EcM" secondAttribute="trailing" constant="50" id="Qo5-ul-a7t"/>
                             <constraint firstItem="YRi-Yb-fbA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="UW0-qK-dRf"/>
                             <constraint firstItem="bVd-Mp-MLj" firstAttribute="top" secondItem="YRi-Yb-fbA" secondAttribute="bottom" constant="10" id="ZOg-AA-UYX"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="bVd-Mp-MLj" secondAttribute="trailing" constant="20" id="Zhy-dg-ALM"/>
                             <constraint firstItem="D98-p1-pfm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="ezu-zh-uPN"/>
+                            <constraint firstItem="r6F-zS-EcM" firstAttribute="top" secondItem="D98-p1-pfm" secondAttribute="bottom" constant="10" id="pOj-Gy-foX"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="YRi-Yb-fbA" secondAttribute="trailing" constant="20" id="ss7-UM-TD7"/>
                             <constraint firstItem="bVd-Mp-MLj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="tJK-cc-kZZ"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="D98-p1-pfm" secondAttribute="trailing" constant="10" id="yMj-me-bIA"/>
@@ -73,6 +83,7 @@
                     <connections>
                         <outlet property="attlabel" destination="bVd-Mp-MLj" id="sza-wv-L1S"/>
                         <outlet property="bottom" destination="4re-rQ-Z0u" id="n1c-8X-DhF"/>
+                        <outlet property="imageView" destination="r6F-zS-EcM" id="tsX-Af-1yu"/>
                         <outlet property="inputBar" destination="zrA-1S-8wf" id="Gno-pb-mv1"/>
                         <outlet property="label" destination="YRi-Yb-fbA" id="pfr-vq-3s1"/>
                     </connections>
