--- a/Topic/Kit/ZYInputView.xib
+++ b/Topic/Kit/ZYInputView.xib
@@ -7,7 +7,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ZYInputView" customModule="Topic" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ZYInputView" customModule="哈哈哈" customModuleProvider="target">
             <connections>
                 <outlet property="sendBtn" destination="od3-oy-XTU" id="xqJ-y1-aC8"/>
                 <outlet property="textView" destination="TBG-Lr-YhO" id="y1v-W1-5xf"/>
@@ -24,7 +24,7 @@
                         <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="jT7-Xy-syd">
                             <rect key="frame" x="0.0" y="0.0" width="382" height="91"/>
                             <subviews>
-                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="fdsajfkldsaf" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="TBG-Lr-YhO">
+                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="TBG-Lr-YhO">
                                     <rect key="frame" x="0.0" y="28" width="334" height="35"/>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                     <constraints>
