--- a/Topic/Base.lproj/Main.storyboard
+++ b/Topic/Base.lproj/Main.storyboard
@@ -16,12 +16,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bVd-Mp-MLj" customClass="TTTAttributedLabel">
-                                <rect key="frame" x="20" y="147.5" width="374" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YRi-Yb-fbA" customClass="ZYLabel" customModule="哈哈哈" customModuleProvider="target">
                                 <rect key="frame" x="20" y="118" width="374" height="19.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
@@ -29,7 +23,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="D98-p1-pfm">
-                                <rect key="frame" x="10" y="178.5" width="394" height="30"/>
+                                <rect key="frame" x="10" y="167.5" width="394" height="30"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HEZ-Ig-NwV">
                                         <rect key="frame" x="0.0" y="0.0" width="197" height="30"/>
@@ -47,12 +41,12 @@
                                     </button>
                                 </subviews>
                             </stackView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zrA-1S-8wf" customClass="ZYInputView" customModule="哈哈哈" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zrA-1S-8wf" customClass="ZYInputBar" customModule="哈哈哈" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="773" width="414" height="89"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="r6F-zS-EcM">
-                                <rect key="frame" x="50" y="218.5" width="314" height="63"/>
+                                <rect key="frame" x="50" y="207.5" width="314" height="63"/>
                                 <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="r6F-zS-EcM" secondAttribute="height" multiplier="5:1" id="u03-V2-pd7"/>
@@ -61,27 +55,23 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="D98-p1-pfm" firstAttribute="top" secondItem="bVd-Mp-MLj" secondAttribute="bottom" constant="10" id="3uS-cw-P3O"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="zrA-1S-8wf" secondAttribute="bottom" id="4re-rQ-Z0u"/>
                             <constraint firstItem="zrA-1S-8wf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="8CT-Zv-dMe"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="zrA-1S-8wf" secondAttribute="trailing" id="BOd-bx-hax"/>
                             <constraint firstItem="r6F-zS-EcM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="Cq6-V8-zo1"/>
+                            <constraint firstItem="D98-p1-pfm" firstAttribute="top" secondItem="YRi-Yb-fbA" secondAttribute="bottom" constant="30" id="G02-Y4-BlP"/>
                             <constraint firstItem="YRi-Yb-fbA" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="IBB-Xf-9bg"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="r6F-zS-EcM" secondAttribute="trailing" constant="50" id="Qo5-ul-a7t"/>
                             <constraint firstItem="YRi-Yb-fbA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="UW0-qK-dRf"/>
-                            <constraint firstItem="bVd-Mp-MLj" firstAttribute="top" secondItem="YRi-Yb-fbA" secondAttribute="bottom" constant="10" id="ZOg-AA-UYX"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="bVd-Mp-MLj" secondAttribute="trailing" constant="20" id="Zhy-dg-ALM"/>
                             <constraint firstItem="D98-p1-pfm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="ezu-zh-uPN"/>
                             <constraint firstItem="r6F-zS-EcM" firstAttribute="top" secondItem="D98-p1-pfm" secondAttribute="bottom" constant="10" id="pOj-Gy-foX"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="YRi-Yb-fbA" secondAttribute="trailing" constant="20" id="ss7-UM-TD7"/>
-                            <constraint firstItem="bVd-Mp-MLj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="tJK-cc-kZZ"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="D98-p1-pfm" secondAttribute="trailing" constant="10" id="yMj-me-bIA"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="2Ie-av-TIh"/>
                     <connections>
-                        <outlet property="attlabel" destination="bVd-Mp-MLj" id="sza-wv-L1S"/>
                         <outlet property="bottom" destination="4re-rQ-Z0u" id="n1c-8X-DhF"/>
                         <outlet property="imageView" destination="r6F-zS-EcM" id="tsX-Af-1yu"/>
                         <outlet property="inputBar" destination="zrA-1S-8wf" id="Gno-pb-mv1"/>
